exampledir = $(datadir)/doc/egachine/examples

examples = \
	client/opengl/morse-scooter.js \
	client/opengl/elevator.js \
	client/opengl/glxgears.js \
	client/opengl/nehe-l05.js \
	client/opengl/nehe-l08.js \
	client/pong.js \
	client/horror.js \
	client/audio.js \
	server/netpong.js \
	server/netorigpong.js \
	svg/svgviewer.js \
	svg/svgtetris.svg \
	ejs/shell.js \
	slideshow/pages.txt \
	slideshow/back.svg \
	slideshow/slideshow.js

nobase_dist_example_DATA = $(examples)
