exampledir = $(datadir)/doc/egachine/examples

examples = \
	client/opengl/morse-scooter.js \
	client/opengl/elevator.js \
	client/opengl/glxgears.js \
	client/opengl/nehe-l05.js \
	client/opengl/nehe-l08.js \
	client/pong.js \
	client/horror.js \
	client/audio.js \
	client/slideshow-pages.txt \
	client/slideshow-back.svg \
	client/slideshow.js \
	client/simple.js \
	client/balls.js \
	client/sgdemo.js \
	client/rail.js \
	client/scrolltest.js \
	server/netpong.js \
	server/netorigpong.js \
	svg/svgviewer.js \
	svg/svgtetris.svg \
	svg/domevent.svg \
	svg/lion.svg \
	ejs/shell.js

nobase_dist_example_DATA = $(examples)
