INCLUDES = @EJS_CFLAGS@ -DCC="$(CC)" -DDEFS="$(DEFS)" -DDEFAULT_INCLUDES="$(DEFAULT_INCLUDES)" -DINCLUDES=@EJS_CFLAGS@ -DAM_CPPFLAGS="$(AM_CPPFLAGS)" -DCPPFLAGS="$(CPPFLAGS)" -DAM_CFLAGS="$(AM_CFLAGS)" -DCFLAGS="$(CFLAGS)" -DAM_LDFLAGS="$(AM_LDFLAGS)" -DLDFLAGS="$(LDFLAGS)"

pkglib_LTLIBRARIES = ejsutil.la

ejsutil_la_SOURCES = ejsutil.cpp
ejsutil_la_LDFLAGS = -module @MODULE_LDFLAGS@

dist_pkgdata_DATA = util.js
EXTRA_DIST = export.sym


